[UPDATE] working implementation

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "compute-array-constructors": "^1.0.0",
     "compute-lcg": "^1.0.0",
     "dstructs-matrix": "^2.0.0",
+    "gamma": "^1.0.0",
     "validate.io-nonnegative": "^1.0.0",
     "validate.io-nonnegative-integer": "^1.0.0",
     "validate.io-number-primitive": "^1.0.0",
